fix background on mobile

--- a/app/styles/layout/l-timeline.scss
+++ b/app/styles/layout/l-timeline.scss
@@ -41,10 +41,13 @@
         content: '';
         background-color: $green-60;
         background-image: linear-gradient(-115deg, transparentize($green-10, .6) 0%, transparentize($leaf-70, .2) 50%), url("/assets/img/fundo8.jpg");
-        background-attachment: fixed;
         background-position: cover;
         background-size: cover;
-        //z-index: -1;
+        background-attachment: fixed;
+
+        @include media('<sm') {
+          background-position: scroll
+        }
       }
 
   }
